native/gua-runtime/include/gua/runtime.h

typedef struct gua_runtime_t gua_runtime_t;
typedef struct gua_screenshot_request_t {
    uint32_t struct_size;
    uint64_t request_id;
    uint64_t session_epoch;
    uint64_t after_frame_sequence;
} gua_screenshot_request_t;
gua_runtime_t* gua_runtime_create(void);
void gua_runtime_destroy(gua_runtime_t* runtime);
void gua_runtime_begin_frame(gua_runtime_t* runtime, const char* screen);
void gua_runtime_end_frame(gua_runtime_t* runtime);
int gua_runtime_register_node_v3(gua_runtime_t* runtime, const gua_node_descriptor_v3_t* descriptor);
int gua_runtime_begin_world_frame(gua_runtime_t* runtime, const char* scene);
int gua_runtime_register_world_object_v1(gua_runtime_t* runtime, const gua_world_object_descriptor_v1_t* descriptor);
int gua_runtime_end_world_frame(gua_runtime_t* runtime);
int gua_runtime_abort_world_frame(gua_runtime_t* runtime);
int gua_runtime_copy_world_object_tree_json(gua_runtime_t* runtime, char* out_json, int out_json_size);
int gua_runtime_query_world_objects_json(gua_runtime_t* runtime, const gua_world_selector_v1_t* selector, char* out_json, int out_json_size);
/* Returns the required byte size including the trailing NUL. Output is NUL-terminated when out_json_size > 0. */
int gua_runtime_copy_ui_tree_json(gua_runtime_t* runtime, char* out_json, int out_json_size);
void gua_runtime_add_log(gua_runtime_t* runtime, int level, const char* message);
int gua_runtime_consume_screenshot_request(gua_runtime_t* runtime, gua_screenshot_request_t* out_request);
int gua_runtime_complete_screenshot_request(gua_runtime_t* runtime, uint64_t request_id, int result, const char* data_uri, int width, int height);
int gua_runtime_copy_version_json(gua_runtime_t* runtime, char* out_json, int out_json_size);
int gua_runtime_clock_install(gua_runtime_t* runtime, double initial_time_ms, double step_ms);
int gua_runtime_clock_pause(gua_runtime_t* runtime);
int gua_runtime_clock_run_for(gua_runtime_t* runtime, double duration_ms, double step_ms);
int gua_runtime_clock_advance(gua_runtime_t* runtime, double duration_ms);
int gua_runtime_clock_resume(gua_runtime_t* runtime);
int gua_runtime_clock_get_status(gua_runtime_t* runtime, gua_clock_status_t* out_status);
int gua_runtime_clock_consume_step(gua_runtime_t* runtime, gua_clock_step_t* out_step);
void gua_runtime_set_godot_plugin_version(gua_runtime_t* runtime, const char* version);
void gua_runtime_set_adapter_version(gua_runtime_t* runtime, const char* adapter, const char* version);
/* Adapter opt-in: enable only when the host pumps and consumes clock steps. */
void gua_runtime_set_virtual_clock_enabled(gua_runtime_t* runtime, int enabled);
/* Adapters opt in only after their host-frame input pump and cleanup route exist. */
void gua_runtime_set_game_input_capabilities(gua_runtime_t* runtime, uint32_t capabilities);
int gua_runtime_begin_game_input_frame(gua_runtime_t* runtime, const char* input_context);
int gua_runtime_register_game_input_action_v1(gua_runtime_t* runtime, const gua_game_input_action_descriptor_v1_t* descriptor);
int gua_runtime_end_game_input_frame(gua_runtime_t* runtime);
int gua_runtime_abort_game_input_frame(gua_runtime_t* runtime);
uint64_t gua_runtime_create_game_input_owner(gua_runtime_t* runtime);
int gua_runtime_release_game_input_owner(gua_runtime_t* runtime, uint64_t owner_id);
int gua_runtime_enqueue_game_input(gua_runtime_t* runtime, const gua_game_input_request_descriptor_v1_t* descriptor, uint64_t* out_request_id);
int gua_runtime_consume_game_input_request(gua_runtime_t* runtime, gua_game_input_request_v1_t* out_request);
int gua_runtime_complete_game_input_request(gua_runtime_t* runtime, uint64_t request_id, int succeeded, int error_code);
int gua_runtime_tick_game_input_leases(gua_runtime_t* runtime, double elapsed_ms);
int gua_runtime_copy_game_input_actions_json(gua_runtime_t* runtime, char* out_json, int out_json_size);
int gua_runtime_copy_game_input_state_json(gua_runtime_t* runtime, uint64_t owner_id, char* out_json, int out_json_size);
/* Adapter opt-in: enable only after the host publishes world frames. */
void gua_runtime_set_world_object_tree_enabled(gua_runtime_t* runtime, int enabled);
/* Host-owned ceiling; transports cannot override this profile per request. */
int gua_runtime_set_observation_profile(gua_runtime_t* runtime, int profile);
int gua_runtime_enqueue_action(gua_runtime_t* runtime, const gua_action_request_descriptor_t* descriptor, uint64_t* out_request_id);
int gua_runtime_consume_action_request(gua_runtime_t* runtime, int action, const char* node_id, gua_action_request_t* out_request);
int gua_runtime_emit_action_result(gua_runtime_t* runtime, const gua_action_result_t* result);
int gua_runtime_poll_event_v3_for_request(gua_runtime_t* runtime, uint64_t request_id, gua_event_v3_t* out_event);