native/gua-core/include/gua/gua.hpp

enum class EventType {
    none = GUA_EVENT_NONE,
    click = GUA_EVENT_CLICK,
    focus = GUA_EVENT_FOCUS,
};
enum class ActionType {
    click = GUA_ACTION_CLICK, focus = GUA_ACTION_FOCUS, set_value = GUA_ACTION_SET_VALUE,
    set_checked = GUA_ACTION_SET_CHECKED, select = GUA_ACTION_SELECT, scroll = GUA_ACTION_SCROLL,
    press_key = GUA_ACTION_PRESS_KEY,
};
struct ActionRequest {
    std::uint64_t request_id = 0;
    ActionType action = ActionType::click;
    std::string node_id;
    std::string value;
    float delta_x = 0;
    float delta_y = 0;
    bool bool_value = false;
    std::string key;
    std::uint32_t modifiers = 0;
    bool sensitive = false;
    int scroll_unit = 0;
};
enum class GameInputValueType { button = GUA_GAME_INPUT_BUTTON, axis1d = GUA_GAME_INPUT_AXIS1D, vector2 = GUA_GAME_INPUT_VECTOR2, text = GUA_GAME_INPUT_TEXT };
struct GameInputAction {
    std::string id, description;
    GameInputValueType value_type = GameInputValueType::button;
    std::optional<double> minimum, maximum;
    bool holdable = false, active = true;
    std::string bindings_json = "[]";
    std::string risk = "safe";
    bool requires_confirmation = false;
    std::string category;
    std::vector<std::string> aliases;
    std::vector<std::string> tags;
    int agent_exposure = GUA_AGENT_EXPOSURE_AUTO;
};
struct GameInputActionSelector {
    std::string id, query, context, category;
    std::optional<GameInputValueType> value_type;
    std::optional<bool> active;
    std::vector<std::string> tags;
    std::uint32_t limit = 20;
};
struct GameInputRequest {
    std::uint64_t request_id = 0, owner_id = 0;
    int kind = 0, operation = 0;
    std::string target, value_json;
    double x = 0, y = 0;
    std::uint32_t lease_ms = 0;
    int device_index = 0;
    bool sensitive = false;
};